--- a/css/sections/general.css
+++ b/css/sections/general.css
@@ -75,6 +75,7 @@ a:hover, a:focus {
 
 .clean-margin {
   margin: 0px;
+  padding: 0px;
 }
 
 .tool-menu {
@@ -102,9 +103,18 @@ a:hover, a:focus {
     text-align: right;
 }
 
+.center {
+    text-align: center;
+}
+
 .logos-container {
     padding: 20px;
 }
+
+.red {
+    color: #B41745;
+}
+
 
 /* 
 * Carrusel de noticias
@@ -144,7 +154,6 @@ a:hover, a:focus {
     color: #fff;
 }
 
-
 /*
 * Horribles iconos redondos
 */
@@ -175,6 +184,65 @@ a:hover, a:focus {
     background-color: #919295;
 }
 
+/*
+* Varios [Grains]
+*/
+
+.grains {
+    background-image: url(../../img/semillas.jpg);
+    background-size: cover;
+    background-position: center center;
+    margin: 20px 0;
+}
+
+.third {
+    padding: 15px;
+}
+
+.inner-third {
+    background:rgba(0,0,0,0.7);
+    padding: 15px;
+    color: #fff;
+    text-align: center;
+}
+
+.third h4 {
+    color: #fff;
+}
+
+/*
+* Modal
+*/
+
+.iframe-container {    
+    padding-bottom: 60%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+ 
+.iframe-container iframe,
+.iframe-container object,
+.iframe-container embed{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.modal.in .modal-dialog {
+  transform: none; /*translate(0px, 0px);*/
+}
+
+#image-slide {
+    height: 320px;
+}
+
+.img-slide {
+    height: 320px;
+}
+
+.carousel-inner.img-slide > .item {
+    height: 320px;
+}
 
 /*==========  Non-Mobile First Method  ==========*/
 
@@ -208,6 +276,8 @@ a:hover, a:focus {
         #myCarousel .list-group {display:none;} 
         #myCarousel {padding-right:0} 
         .carousel-inner > .item { height: auto;}
+        .principal-logo {max-height: 120px; margin-right: auto; margin-left: auto;}
+        .secondary-logo {max-height: 80px; margin-right: auto; margin-left: auto;}
     }
 
     /* Extra Small Devices, Phones */ 
@@ -215,6 +285,8 @@ a:hover, a:focus {
         .carousel-caption p,
         #myCarousel .list-group {display:none;} 
         .carousel-inner > .item { height: auto;}
+        .principal-logo {max-height: 120px; margin-right: auto; margin-left: auto;}
+        .secondary-logo {max-height: 80px; margin-right: auto; margin-left: auto;}
     }
 
     /* Custom, iPhone Retina */ 
@@ -222,4 +294,6 @@ a:hover, a:focus {
         .carousel-caption p,
         #myCarousel .list-group {display:none;} 
         .carousel-inner > .item { height: auto;}
+        .principal-logo {max-height: 120px; margin-right: auto; margin-left: auto;}
+        .secondary-logo {max-height: 80px; margin-right: auto; margin-left: auto;}
     }
