--- a/css/sections/general.css
+++ b/css/sections/general.css
@@ -69,10 +69,6 @@ a:hover, a:focus {
     color: #515151;
 }
 
-.clear {
-    height: 10px;
-}
-
 .clean-margin {
   margin: 0px;
   padding: 0px;
@@ -242,6 +238,42 @@ a:hover, a:focus {
 
 .carousel-inner.img-slide > .item {
     height: 320px;
+}
+
+/* Add flexbox settings */
+.grid {
+  display: -webkit-flex;
+  display: flex;
+
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.grid-item {
+  display: -webkit-flex;
+  display: flex;
+  align-items: stretch;
+  flex: 0 1 auto;
+}
+
+/*
+* Footer
+*/
+
+.links {
+    padding: 10px;
+}
+
+.footer-logo {
+    max-height: 100px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px;
 }
 
 /*==========  Non-Mobile First Method  ==========*/
