--- a/css/sections/general.css
+++ b/css/sections/general.css
@@ -6,13 +6,13 @@
 h1 {
     font-family: 'soberana_titularregular', serif;
     color: #515151;
-    font-size: 24px;
+    font-size: 2.16em;
     font-variant: small-caps;
 }
 
 h2 {
     font-family: 'soberana_titularregular', serif;
-    font-size: 26px;
+    font-size: 2em;
     font-variant: uppercase;
     text-align: center;
     margin-right: 20px;
@@ -21,7 +21,7 @@ h2 {
 
 h3 {
     font-family: 'soberana_titularregular', serif;
-    font-size: 22px;
+    font-size: 1.8em;
     font-variant: uppercase;
     text-align: center;
     color: #b41745;
@@ -30,21 +30,21 @@ h3 {
 
 h4 {
     font-family: 'soberana_titularregular', serif;
-    font-size: 16px;
+    font-size: 1.3em;
     font-variant: uppercase;
     color: #515151;
 }
 
 h5 {
     font-family: 'soberana_titularregular', serif;
-    font-size: 14px;
+    font-size: 1.16em;
     font-variant: uppercase;
     color: #B31745;
 }
 
 h6 {
     font-family: 'soberana_titularregular', serif;
-    font-size: 12px;
+    font-size: 1em;
     font-variant: normal;
     color: #515151;
 }
