--- a/css/cima.css
+++ b/css/cima.css
@@ -2,6 +2,8 @@
 
 @import url("sections/bootstrap-mod.css"); /* Bootstrap Modificators*/
 
-@import url("sections/general.css"); /* Home Styles */
+@import url("sections/general.css"); /* General Styles */
+
+@import url("sections/home.css"); /* Home Styles */
 
 @import url("sections/level-1.css"); /* Páginas de nivel 1 (Teaser) Styles */
