Plantilla sin Sidebar
Generalmente se cargan los forms dentro de esta plantilla. Solo deberá
cuidarse que se incluyan dentro del un <div class="panel
panel-success"></div>

--- a/css/cima.css
+++ b/css/cima.css
@@ -7,3 +7,5 @@
 @import url("sections/home.css"); /* Home Styles */
 
 @import url("sections/level-1.css"); /* Páginas de nivel 1 (Teaser) Styles */
+
+@import url("sections/forms.css"); /* Forms Styles */
