--- a/css/sections/level-1.css
+++ b/css/sections/level-1.css
@@ -72,3 +72,12 @@
 .seccion ul {
     padding-left: 20px;
 }
+
+img {
+    float: left;
+    padding-right: 15px;
+}
+
+article h4 {
+    clear: both;
+}
